--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.3.0",
     "antd": "^5.15.3",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
