--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Next.js
+.next/
+out/
+
+# Build outputs
 dist
 dist-ssr
-*.local
+build
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
@@ -28,4 +42,6 @@ package-lock.json
 yarn.lock
 pnpm-lock.yaml
 
-.env
+# Vercel
+.vercel
+/src/generated/prisma
